tests/transpiler/x/cs/map_assign.error
dotnet run: exit status 1
/tmp/TestCSTranspiler_VMValid_Golden3245023897/050/Program.cs(12,9): error CS0021: Cannot apply indexing with [] to an expression of type 'Score' [/tmp/TestCSTranspiler_VMValid_Golden3245023897/050/app.csproj]
/tmp/TestCSTranspiler_VMValid_Golden3245023897/050/Program.cs(13,27): error CS0021: Cannot apply indexing with [] to an expression of type 'Score' [/tmp/TestCSTranspiler_VMValid_Golden3245023897/050/app.csproj]

The build failed. Fix the build errors and run again.
