tests/transpiler/x/cs/map_assign.cs
// Generated by Mochi 0.10.33 on 2025-07-21 18:06 +0700
using System;
using System.Collections.Generic;

struct Score {
    public int alice;
    public override string ToString() => $"{{\"alice\": {alice}}}";
}
class Program {
    static Score scores = new Score{alice = 1};
    static void Main() {
        scores["bob"] = 2;
        Console.WriteLine(scores["bob"]);
    }
}
